objects/ACE_Vendavo_SKU_Prices__c.object
<CustomObject>
    <fields>
        <fullName>CoreList_ID__c</fullName>
        <description>Vendavo  od_vendavo.od_recon_core_items_vdo.v_corelist_id</description>
        <label>CoreList ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendavo_Effective_Date__c</fullName>
        <label>Vendavo_Effective_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendavo_Price__c</fullName>
        <label>Vendavo_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Web_Price__c</fullName>
        <label>Web Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>ACE Vendavo SKU Prices</label>
    <nameField>
        <label>ACE Vendavo SKU Prices Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACE Vendavo SKU Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>